# intern_project

./: .gitlab-ci.yaml  .gitlab-ci.yml  DOCS_OPENAPI.yaml  README.md  docker-compose.yaml  dockerfile  dockerfile_test  openapi.yaml  pyproject.toml
app/: OPENAPI_DOCUMENTATION.yaml  client.py  dockerfile  main.py  pyproject.toml
app/tests/: test_db.py  test_main.py  test_rabbitmq.py  test_redis.py
fastapi/: main.py
fastapi/schemas/: __init__.py  schemas.py
hooks/: COMMIT_EDITMSG  commit-msg.py  pre-commit.py  pre-receive.py  prepare-commit-msg.py
