[tool.poetry]
name = "szymon-urzedowski"
version = "0.1.0"
description = ""
authors = ["surzedowski <szymon.urzedowski@capgemini.com>"]
readme = "README.md"
packages = [{include = "szymon_urzedowski"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = {extras = ["all"], version = "^0.81.0"}


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
fastapi = "^0.81.0"
pylint = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
