[tool.poetry]
name = "szymon-urzedowski"
version = "0.1.0"
description = ""
authors = ["surzedowski <szymon.urzedowski@capgemini.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
fastapi = "^0.82.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
psycopg2 = "^2.9.3"
databases = "^0.6.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pylint = "^2.15.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
